<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main strings -->
    <string name="app_name">Coyote Reader</string>

    <!-- errors -->
    <string name="error_fetch_data">Error retrieving data from server</string>
    <string name="error_null_items">Error loading article list, reload feed</string>
    <string name="error_mark_unread">Error updating unread articles</string>
    <string name="error_update_starred">Error updating starred status on server</string>
    <string name="error_one_account_allowed">Only one account allowed</string>
    <string name="error_login">Error retrieving login credentials</string>
    <string name="error_subscription_empty">Subscription address can\'t be empty</string>
    <string name="error_subscription_name_empty">Subscription name can\'t be empty</string>
    <string name="error_adding_subscription">Error adding subscription</string>
    <string name="error_unsubscribe">Error unsubscribing from feed</string>
    <string name="error_change_folder">Error changing folders</string>
    <string name="error_change_name">Error changing name</string>
    <string name="error_new_folder_empty">Folder Name can\'t be empty</string>
    <string name="error_folder_name_empty">Folder name can\'t be empty</string>
    <string name="error_delete_folder">Error deleting folder</string>
    <string name="error_account_permissions">Need account manager permissions</string>

    <!-- preferences -->
    <string name="auth_prefs">AuthPrefsFile</string>
    <string name="auth_token">authToken</string>
    <string name="pref_dialog_title">Preferences</string>
    <string name="pref_alpha">Sort feeds alphabetically</string>
    <string name="pref_alpha_summ">If unchecked, use manual sort order</string>
    <string name="pref_unread">Show unread items only</string>
    <string name="pref_confirm">Confirm mark all read</string>
    <string name="pref_advance">Advance on mark all read</string>
    <string name="pref_advance_summ">Will open next unread feed</string>
    <string name="pref_browser">Browser for external links</string>
    <string name="pref_browser_default_value">external_browser</string>
    <string name="pref_browser_chrome_tabs">chrome_tabs</string>
    <string name="pref_browser_external_browser">external_browser</string>

    <!-- Menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add Feed</string>
    <string name="action_share">Share</string>
    <string name="action_mark_article_unread">Mark Article Unread</string>
    <string name="action_feed_unsubscribe">Unsubscribe</string>
    <string name="action_feed_change_folders">Change Folders</string>
    <string name="action_feed_change_name">Change Name</string>
    <string name="action_folder_change_name">Change Folder Name</string>
    <string name="action_folder_delete">Delete Folder</string>

    <!-- image descriptions -->
    <string name="nav_expand_image_description">Expand/Collapse</string>
    <string name="tag_row_image_description">Subscription icon</string>
    <string name="feed_row_image_description">Feed icon</string>
    <string name="item_star_image_description">Favorites</string>

    <!-- alert string -->
    <string name="alert_mark_all_as_read">Mark all as read?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_logout">Are you sure you want to log out?</string>
    <string name="alert_add_subscription">Add Subscription</string>
    <string name="prompt_subscription_url">Enter Feed URL</string>
    <string name="alert_unsubscribe_title">Unsubscribe</string>
    <string name="alert_unsubscribe_prompt">Are you sure you want to unsubscribe?</string>
    <string name="alert_subscription_name">Change Subscription Name</string>
    <string name="prompt_subscription_name">Enter Feed Name</string>
    <string name="alert_new_folder">New Folder</string>
    <string name="prompt_new_folder_name">Enter New Folder Name</string>
    <string name="prompt_folder_name">Enter Folder Name</string>
    <string name="alert_folder_name">Change Folder Name</string>
    <string name="alert_delete_folder_title">Delete Folder</string>
    <string name="alert_delete_folder_prompt">Are you sure you want to delete this folder?</string>

    <!-- notifications -->
    <string name="notify_marking_all_read">Marking all as read</string>
    <string name="unsubscribe_successful">Unsubscribe successful</string>
    <string name="change_folder_successful">Folders changed successfully</string>
    <string name="change_subscription_name_successful">Name changed successfully</string>
    <string name="change_folder_name_successful">Name changed successfully</string>
    <string name="delete_folder_successful">Folder delete successful</string>

    <!-- miscellaneous -->
    <string name="article_byline">by %1$s</string>

    <!-- ACRA -->
    <string name="crash_dialog_title">CoyoteReader has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>

</resources>
