<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.wilee8.coyotereader2.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24dp"
        android:onClick="refreshOnClick"
        android:orderInCategory="97"
        app:showAsAction="ifRoom"
        android:title="@string/action_refresh"
        android:visible="true"/>
    <item
        android:id="@+id/action_article_share"
        app:showAsAction="ifRoom"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="110"
        app:showAsAction="never"
        android:onClick="logout" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="120"
        app:showAsAction="never" />
</menu>
